--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -1,3 +1,8 @@
 {
-    "De maatschappij is het probleem, niet de mens met de beperking": "De maatschappij is het probleem, niet de mens met de beperkin"
+    "Projects": "Projecten",
+    "HomeSubtitle": "De maatschappij is het probleem, niet de mens met de beperking",
+    "AllRights": "Alle rechten voorbehouden",
+    "Edit": "Bewerken",
+    "Save": "Opslaan",
+    "Add text section": "Voeg tekst sectie toe"
 }
