Project pages redesign

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -4,5 +4,6 @@
     "AllRights": "Alle rechten voorbehouden",
     "Edit": "Bewerken",
     "Save": "Opslaan",
-    "Add text section": "Voeg tekst sectie toe"
+    "Add text section": "Voeg tekst sectie toe",
+    "Our projects": "Onze projecten"
 }
