--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -5,5 +5,13 @@
     "Edit": "Bewerken",
     "Save": "Opslaan",
     "Add text section": "Voeg tekst sectie toe",
-    "Our projects": "Onze projecten"
+    "Our projects": "Onze projecten",
+    "Contact paragraph": "Wilt u contact opnemen met Bureau Onbeperkte Zaken? Dan kunt u dat doen door het onderstaande contact formulier in te vullen.",
+    "Contact Form": "Contact Formulier",
+    "Full name": "Naam",
+    "Full name example": "Peter Nijkerk",
+    "Email example": "peternijkerk@mail.nl",
+    "Message": "Bericht",
+    "Message example": "Uw bericht hier...",
+    "Submit": "Verzenden"
 }
