Contact page + Dusk test

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -13,5 +13,6 @@
     "Email example": "peternijkerk@mail.nl",
     "Message": "Bericht",
     "Message example": "Uw bericht hier...",
-    "Submit": "Verzenden"
+    "Submit": "Verzenden",
+    "Contact sent successfully": "Het contact formulier is succesvol verzonden."
 }
