Fixed nav in cms and language

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -10,6 +10,7 @@
     "Our projects": "Onze projecten",
     "Contact paragraph": "Wilt u contact opnemen met Bureau Onbeperkte Zaken? Dan kunt u dat doen door het onderstaande contact formulier in te vullen.",
     "Contact Form": "Contact Formulier",
+    "ContactMessages": "Contact berichten",
     "Full name": "Naam",
     "Full name example": "Peter Nijkerk",
     "Email example": "peternijkerk@mail.nl",
@@ -22,6 +23,14 @@
     "Images": "Afbeeldingen",
     "Video's": "Video's",
     "Audio": "Audiofragmenten",
+    "Logout": "Uitloggen",
+    "ProjectEdit": "Project aanpassen",
+    "ProjectAdd": "Project toevoegen",
+    "Media": "Media",
+    "FirstTitleLabel": "Titel",
+    "FirstContentLabel": "Content",
+    "SecondTitleLabel": "Tweede Titel",
+    "SecondContentLabel": "Tweede Content",
     "IndexProjectHulp": "Op deze pagina is een overzicht te zien van alle projecten.\n Klik op een kaartje om het project aan te passen.",
     "ActionProjectHulp": "Op deze pagina kan je een project toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Project toevoegen' of 'Project aanpassen'.",
     "IndexContactHulp": "Op deze pagina is een overzicht te zien van alle verzonden contactformulieren.\n Druk op de knop 'Lees bericht' om dat specifieke bericht te bekijken.",
