--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -34,5 +34,14 @@
     "IndexProjectHulp": "Op deze pagina is een overzicht te zien van alle projecten.\n Klik op een kaartje om het project aan te passen.",
     "ActionProjectHulp": "Op deze pagina kan je een project toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Project toevoegen' of 'Project aanpassen'.",
     "IndexContactHulp": "Op deze pagina is een overzicht te zien van alle verzonden contactformulieren.\n Druk op de knop 'Lees bericht' om dat specifieke bericht te bekijken.",
-    "DetaillContactHulp": "Op deze pagina is een specifiek bericht te zien.\n Druk op de knop 'Verwijder' om het bericht te verwijderen." 
+    "DetaillContactHulp": "Op deze pagina is een specifiek bericht te zien.\n Druk op de knop 'Verwijder' om het bericht te verwijderen.",
+    "Recommendations": "Comité van aanbevelingen",
+    "RecommendationAdd": "",
+    "IndexRecommendationHulp" : "",
+    "ActionRecommendationHulp": "",
+    "RecommendationEdit": "",
+    "NameLabel": "",
+    "DescriptionLabel": "",
+    "WebLinkLabel": "",
+    "Image": "Afbeelding"
 }
