--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -36,12 +36,12 @@
     "IndexContactHulp": "Op deze pagina is een overzicht te zien van alle verzonden contactformulieren.\n Druk op de knop 'Lees bericht' om dat specifieke bericht te bekijken.",
     "DetaillContactHulp": "Op deze pagina is een specifiek bericht te zien.\n Druk op de knop 'Verwijder' om het bericht te verwijderen.",
     "Recommendations": "Comité van aanbevelingen",
-    "RecommendationAdd": "",
-    "IndexRecommendationHulp" : "",
-    "ActionRecommendationHulp": "",
-    "RecommendationEdit": "",
-    "NameLabel": "",
-    "DescriptionLabel": "",
-    "WebLinkLabel": "",
+    "RecommendationAdd": "Aanbeveling toevoegen",
+    "IndexRecommendationHulp" : "Op deze pagina is een overzicht te zien van het comité van aanbevelingen.\n Klik op een kaartje om de aanbeveling aan te passen.",
+    "ActionRecommendationHulp": "Op deze pagina kan je een aanbeveling toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Aanbeveling toevoegen' of 'Aanbeveling aanpassen'",
+    "RecommendationEdit": "Aanbeveling aanpassen",
+    "NameLabel": "Naam",
+    "DescriptionLabel": "Omschrijving",
+    "WebLinkLabel": "Website URL",
     "Image": "Afbeelding"
 }
