Frontend over ons pagina

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -43,5 +43,6 @@
     "NameLabel": "Naam",
     "DescriptionLabel": "Omschrijving",
     "WebLinkLabel": "Website URL",
-    "Image": "Afbeelding"
+    "Image": "Afbeelding",
+    "About us": "Over ons"
 }
