added controller and view

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -8,6 +8,8 @@
     "Remove": "Verwijderen",
     "Add text section": "Voeg tekst sectie toe",
     "Our projects": "Onze projecten",
+    "Committee of recommendations": "Comité van aanbevelingen",
+    "These people support our goal": "Deze mensen steunen onze doelstelling:",
     "Contact paragraph": "Wilt u contact opnemen met Bureau Onbeperkte Zaken? Dan kunt u dat doen door het onderstaande contact formulier in te vullen.",
     "Contact Form": "Contact Formulier",
     "ContactMessages": "Contact berichten",
