--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -44,5 +44,6 @@
     "DescriptionLabel": "Omschrijving",
     "WebLinkLabel": "Website URL",
     "Image": "Afbeelding",
-    "About us": "Over ons"
+    "About us": "Over ons",
+    "Policy": "Beleid"
 }
