--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -48,6 +48,6 @@
     "Image": "Afbeelding",
     "About us": "Over ons",
     "CMS": "CMS",
-    "Frontend": "Terug naar website"
+    "Frontend": "Terug naar website",
     "Policy": "Beleid"
 }
