--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -50,7 +50,7 @@
     "CMS": "CMS",
     "Frontend": "Terug naar website",
     "Policy": "Beleid",
-    "Partners": "Samenwerkingspartner",
+    "Partners": "Samenwerkingspartners",
     "PartnerAdd": "Samenwerkingspartner toevoegen",
     "PartnerEdit": "Samenwerkingspartner aanpassen",
     "IndexPartnerHulp": "Op deze pagina is een overzicht te zien van de partners.\n Klik op een kaartje om de partner aan te passen.",
