--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -48,6 +48,7 @@
     "Image": "Afbeelding",
     "About us": "Over ons",
     "CMS": "CMS",
+    "Language": "Taal",
     "Frontend": "Terug naar website",
     "Policy": "Beleid",
     "Partners": "Samenwerkingspartners",
