--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -1,3 +1,4 @@
 {
-    "De maatschappij is het probleem, niet de mens met de beperking": "Society is the problem, not the person with the disability"
+    "HomeSubtitle": "Society is the problem, not the person with the disability",
+    "AllRights": "All rights reserved"
 }
