All pages en lang support

--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -55,5 +55,6 @@
     "PartnerAdd": "Samenwerkingspartner toevoegen",
     "PartnerEdit": "Samenwerkingspartner aanpassen",
     "IndexPartnerHulp": "Op deze pagina is een overzicht te zien van de partners.\n Klik op een kaartje om de partner aan te passen.",
-    "ActionPartnerHulp": "Op deze pagina kan je een partner toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Samenwerkingspartner toevoegen' of 'Samenwerkingspartner aanpassen'"
+    "ActionPartnerHulp": "Op deze pagina kan je een partner toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Samenwerkingspartner toevoegen' of 'Samenwerkingspartner aanpassen'",
+    "Collaborative partners": "Samenwerkingspartners"
 }
