--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -1,4 +1,8 @@
 {
     "HomeSubtitle": "Society is the problem, not the person with the disability",
-    "AllRights": "All rights reserved"
+    "AllRights": "All rights reserved",
+    "Contact paragraph": "Would you like to contact Bureau Onbeperkte Zaken? Then you can do so by filling out the contact form below.",
+    "Full name example": "Jane Doe",
+    "Email example": "janedoe@mail.com",
+    "Message example": "Your message here"
 }
