Added multi language to projects

--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -4,5 +4,58 @@
     "Contact paragraph": "Would you like to contact Bureau Onbeperkte Zaken? Then you can do so by filling out the contact form below.",
     "Full name example": "Jane Doe",
     "Email example": "janedoe@mail.com",
-    "Message example": "Your message here"
+    "Message example": "Your message here",
+    "Projects": "Projects",
+    "Edit": "Edit",
+    "Save": "Save",
+    "Add": "Add",
+    "Remove": "Remove",
+    "Add text section": "Add text section",
+    "Our projects": "Our projects",
+    "Committee of recommendations": "Committee of recommendations",
+    "These people support our goal": "These people support our goal",
+    "Contact Form": "Contact Form",
+    "ContactMessages": "Messages",
+    "Full name": "Full name",
+    "Message": "Message",
+    "Submit": "Submit",
+    "Contact sent successfully": "The contact form was send succesfully",
+    "Media Library": "Media Library",
+    "Add To Library": "Add to Library",
+    "Images": "Images",
+    "Video's": "Video's",
+    "Audio": "Audio",
+    "Logout": "Logout",
+    "ProjectEdit": "Edit project",
+    "ProjectAdd": "Add project",
+    "Media": "Media",
+    "FirstTitleLabel": "Title",
+    "FirstContentLabel": "Content",
+    "SecondTitleLabel": "Second Titel",
+    "SecondContentLabel": "Second Content",
+    "Recommendations": "Committee of recommendations",
+    "RecommendationAdd": "Add recommendation",
+    "RecommendationEdit": "Edit Recommendation",
+    "NameLabel": "Name",
+    "DescriptionLabel": "Description",
+    "WebLinkLabel": "Website URL",
+    "Image": "Image",
+    "About us": "About us",
+    "CMS": "CMS",
+    "Language": "Language",
+    "Frontend": "Back to website",
+    "Policy": "Policy",
+    "Partners": "Collaborative partners",
+    "PartnerAdd": "Add collaborative partner",
+    "PartnerEdit": "Edit collaborative partner",
+    "Collaborative partners": "Collaborative partners",
+    "IndexPartnerHulp": "",
+    "ActionPartnerHulp": "",
+    "IndexRecommendationHulp" : "",
+    "ActionRecommendationHulp": "",
+    "IndexProjectHulp": "",
+    "ActionProjectHulp": "",
+    "IndexContactHulp": "",
+    "DetaillContactHulp": ""
+
 }
