--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -56,6 +56,8 @@
     "IndexProjectHulp": "",
     "ActionProjectHulp": "",
     "IndexContactHulp": "",
-    "DetaillContactHulp": ""
+    "DetaillContactHulp": "",
+    "Email": "Email",
+    "Date": "Date"
 
 }
