--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -58,5 +58,6 @@
     "ActionPartnerHulp": "Op deze pagina kan je een partner toevoegen of aanpassen.\n Ook is het mogelijk om een afbeelding toe te voegen door op de knop 'Media Bibliotheek' te drukken.\n Zodra je klaar bent druk je op de knop met 'Samenwerkingspartner toevoegen' of 'Samenwerkingspartner aanpassen'",
     "Collaborative partners": "Samenwerkingspartners",
     "Email": "Email",
-    "Date": "Datum"
+    "Date": "Datum",
+    "Cookie": "Deze website maakt gebruik van functionele en analyse cookies voor een optimale gebruikerservaring. Bureau Onbepertke Zaken en derde partijen plaatsen tracking cookies zodat we u kunnen herkennen. Bekijk onze privacyverklaring voor meer informatie."
 }
