--- a/BOZ_App/resources/lang/nl.json
+++ b/BOZ_App/resources/lang/nl.json
@@ -59,5 +59,8 @@
     "Collaborative partners": "Samenwerkingspartners",
     "Email": "Email",
     "Date": "Datum",
-    "Cookie": "Deze website maakt gebruik van functionele en analyse cookies voor een optimale gebruikerservaring. Bureau Onbepertke Zaken en derde partijen plaatsen tracking cookies zodat we u kunnen herkennen. Bekijk onze privacyverklaring voor meer informatie."
+    "Cookie": "Deze website maakt gebruik van functionele en analyse cookies voor een optimale gebruikerservaring. Bureau Onbepertke Zaken en derde partijen plaatsen tracking cookies zodat we u kunnen herkennen. Bekijk onze privacyverklaring voor meer informatie.",
+    "I am from": "Ik kom van deze pagina",
+    "Location": "Pagina locatie",
+    "I want to know more!": "Ik wil meer weten!"
 }
