--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -58,6 +58,7 @@
     "IndexContactHulp": "",
     "DetaillContactHulp": "",
     "Email": "Email",
-    "Date": "Date"
+    "Date": "Date",
+    "Privacy declaration": "Privacy declaration"
 
 }
