--- a/BOZ_App/resources/lang/en.json
+++ b/BOZ_App/resources/lang/en.json
@@ -49,14 +49,14 @@
     "PartnerAdd": "Add collaborative partner",
     "PartnerEdit": "Edit collaborative partner",
     "Collaborative partners": "Collaborative partners",
-    "IndexPartnerHulp": "",
-    "ActionPartnerHulp": "",
-    "IndexRecommendationHulp" : "",
-    "ActionRecommendationHulp": "",
-    "IndexProjectHulp": "",
-    "ActionProjectHulp": "",
-    "IndexContactHulp": "",
-    "DetaillContactHulp": "",
+    "IndexPartnerHulp": "This page shows a list of all partners.\n Click a card to edit a partner.",
+    "ActionPartnerHulp": "On this page you can edit a Partner.\n It is also possible to add an image by clicking on the media 'library'.\n When you are done, click on 'Add Partner' or 'Edit Partner'",
+    "IndexRecommendationHulp" : "This page shows a list of all Recommendations.\n Click a card to edit a recommendation.",
+    "ActionRecommendationHulp": "On this page you can edit a Recommendation.\n It is also possible to add an image by clicking on the media 'library'.\n When you are done, click on 'Add Recommendation' or 'Edit Recommendation'",
+    "IndexProjectHulp": "This page shows a visible list of all projects.\n Click a card to edit a project",
+    "ActionProjectHulp": "On this page you can edit a project.\n It is also possible to add an image by clicking on the media 'library'.\n When you are done, click on 'Add project' or 'Edit project' ",
+    "IndexContactHulp": "This page show a specific message.\n Press the 'Delete' button to delete the message.",
+    "DetaillContactHulp": "This page shows a list of all contactforms that have been sent.\n press the 'Read message' to read a specific message. ",
     "Email": "Email",
     "Date": "Date",
     "Privacy declaration": "Privacy declaration"
